--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #caculator{
     background-color: rgb(42, 42, 42);
     width: 320;
-    height: 480;
+    height: 450;
     border-radius: 5px;
 }
 
@@ -10,27 +10,63 @@
     width: 320px;
     height: 17%;
     border-radius: 1px;
-    background: linear-gradient(to bottom,rgb(239, 239, 239) 0%,rgb(245, 250, 228)30%,rgb(245, 250, 228)80%,rgb(243, 243, 243) 100%);
+    background: linear-gradient(to bottom,rgb(239, 239, 239) 0%,rgba(223,226,200,255)30%,rgba(213,217,184,255)75%,rgb(243, 243, 243) 100%);
 }
 
 #buttonsContainer{
-    margin-top: 20px;
-}
-.buttons{
-    
-    width:50px;
-    height: 40px;
-    background-color: black;
-    display: flex;
-    color: whitesmoke;
-    border-radius: 7px;
-    justify-content: center;
-    align-items: center;
     
 }
 
-.row1{
+.buttons.brownButtons{
+    background-color: rgba(110,92,83,255);
+    background: linear-gradient(to bottom,rgba(181,172,167,255)0%,rgba(110,92,83,255)45%, rgba(88,72,62,255) 100% );
+}
+
+
+.blackButtons{
+    background-color: black;
+    background: linear-gradient(to bottom,rgba(101,101,101,255)0%, black 76%);
+    display: flex;
+}
+.buttons{
+    margin-top: 20px;
+    width:60px;
+    height: 50px;
+    border: black solid 1px;
+    display: flex;
+    color: rgb(251, 251, 251);
+    border-radius: 7px;
+    justify-content: center;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+#equalButton{
+    height: 120px ;
+    background-color: orange;
+    background: linear-gradient(rgba(252,188,134,255)0%,rgba(244,127,28,255)23%,rgba(245,128,30,255)60%,rgba(238,121,21,255)80%, rgba(189,88,15,255)100%);
+    display: flex;
+    align-items: end;
+}
+
+#zeroButton{
+    width: 140;
+
+}
+
+.row1, .row2, .row3,.row4 {
     display: flex;
     justify-content: space-evenly;
     gap: 5px;
+    
+}
+
+.row5{
+    display: flex;
+    gap: 15px;
+    margin-top:-73px ;
+    margin-left: 4%;
+    
+
 }
