--- a/style.css
+++ b/style.css
@@ -1,21 +1,34 @@
 #caculator{
     background-color: rgb(42, 42, 42);
+    
     width: 320;
     height: 450;
     border-radius: 5px;
 }
 
 #resultsScreen{
+    display: flex;
     background-color: rgb(245, 250, 228);
     width: 320px;
     height: 17%;
     border-radius: 1px;
     background: linear-gradient(to bottom,rgb(239, 239, 239) 0%,rgba(223,226,200,255)30%,rgba(213,217,184,255)75%,rgb(243, 243, 243) 100%);
+    justify-content:end;
+    align-items: center;
+   
 }
 
-#buttonsContainer{
-    
+#numbers{
+    margin-right: 20px;
+    gap: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    font-weight: bold;
+    font-size: 43px;
 }
+
+
+
+
 
 .buttons.brownButtons{
     background-color: rgba(110,92,83,255);
@@ -39,7 +52,7 @@
     justify-content: center;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    font-weight: bolder;
 }
 
 #equalButton{
